--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svg-pathfinder",
+  "name": "pathfinder",
   "version": "0.0.0",
   "private": true,
   "description": "a svg path/code editor written in ember",
